--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@finsweet/developer-starter",
-  "version": "0.0.0",
-  "description": "Developer starter template for Finsweet projects.",
+  "name": "@studiorelief/mundokids",
+  "version": "1.0.0",
+  "description": "Mundo Kids is an indoor park for adults and children",
   "homepage": "https://github.com/finsweet/developer-starter#readme",
   "license": "ISC",
   "keywords": [],
   "author": {
-    "name": "Finsweet",
-    "url": "https://finsweet.com/"
+    "name": "Studio Relief",
+    "url": "https://studiorelief.fr/"
   },
   "repository": {
     "type": "git",
@@ -52,7 +52,8 @@
     "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0"
+    "@finsweet/ts-utils": "^0.40.0",
+    "swiper": "^11.2.10"
   },
   "engines": {
     "pnpm": ">=10"
