--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@finsweet/ts-utils": "^0.40.0",
+    "gsap": "^3.13.0",
     "swiper": "^11.2.10"
   },
   "engines": {
